@@ -3544,4 +3544,13 @@ command to generate the output files.
     <root-XML namespaceURI="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul" localName="window"/>
     <glob pattern="*.xul"/>
   </mime-type>
+  <mime-type type="application/x-t602">
+    <_comment>T602 document</_comment>
+    <magic priority="50">
+      <match offset="0" type="string" value="@CT 0" />
+      <match offset="0" type="string" value="@CT 1" />
+      <match offset="0" type="string" value="@CT 2" />
+    </magic>
+    <glob pattern="*.602" />
+  </mime-type>
 </mime-info>
